<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width= "match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeTV"
        android:text="@string/welcomeText"
        android:textSize="45dp"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width= "match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameText1"
        android:id="@+id/nameText1"
        android:gravity="center"
        android:textSize="50dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionTV"
        android:gravity="center"
        android:hint="Enter Name Here"
        android:textSize="45dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextBtn"
        android:id="@+id/nextButton" />

</LinearLayout>

